--- a/demo.html
+++ b/demo.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
     <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <meta name="format-detection" content="telphone=no, email=no" >
-    <!-- <link rel="stylesheet" href="module/css/style.css"> -->
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link rel="stylesheet" href="fonts1/iconfont.css">
     <style type="text/css">
         * {
@@ -46,7 +46,53 @@
             background: #fff;
             border-radius: 10px;
         }
-
+        .logo {
+            width: 50%;
+            height: auto;
+            margin: 0 auto;
+            flex-shrink: 0;
+        }
+        .logo > img {
+            width: 100%;
+            height: 100%;
+            margin-top: 30px;
+        }
+        .logo > p {
+            color: #333;
+            font-size: 20px;
+            line-height: 30px;
+        }
+        .box {
+            width: 90%;
+            height: 50px;
+            margin: 30px auto;
+            display: flex;
+            border-bottom: solid 1px #ccc;
+        }
+        .box > img {
+            width: 10%;
+            height: 80%;
+            margin-right: 10%;
+            margin-bottom: 10px;
+        }
+        .box > input {
+            width: 80%;
+            height: 40px;
+            border: none;
+        }
+        .btn {
+            width: 90%;
+            height: 40px;
+            margin: 0 auto;
+        }
+        button{
+            width: 100%;
+            height: 100%;
+            background: green;
+            outline: none;
+            border: none;
+            color: #fff;
+        }
     </style>
 </head>
 <body>
@@ -59,8 +105,19 @@
         <main>
             <div class="content">
                 <div class="logo">
-                    <img src="module/img/iogo_01.png" alt="">
+                    <img src="img/logo_01.png" alt="">
                     <p>设备测试预约系统</p>
+                </div>
+                <div class="box">
+                    <img src="img/icon_01.png" alt="">
+                    <input type="text" placeholder="请输入手机号">
+                </div>
+                <div class="box">
+                    <img src="img/icon_03.png" alt="">
+                    <input type="text" placeholder="请输入密码">
+                </div>
+                <div class="btn">
+                    <button>登录账号 开始预约</button>
                 </div>
             </div>
         </main>
